# Copyright (c) The Surf Authors

executable("surf") {

    ldflags = [
        "-lcurl",
    ]

    sources = [
        "//surf/cli.cc",
        "//surf/cli.h",
        "//surf/http.cc",
        "//surf/http.h",
        "//surf/main.cc",
        "//surf/main.h",
        "//surf/version.cc",
        "//surf/version.h",
    ]
}

shared_library("libsurf") {
    ldflags = [
        "-lcurl",
    ]

    sources = [
        "//surf/http.cc",
        "//surf/http.h",
        "//surf/version.cc",
        "//surf/version.h",
    ]
}

static_library("libsurf_static") {
    ldflags = [
        "-lcurl",
    ]
    
    sources = [
        "//surf/http.cc",
        "//surf/http.h",
        "//surf/version.cc",
        "//surf/version.h",
    ]
}
